--- a/src/app/pages/dns/widgets/editableRowTable.html
+++ b/src/app/pages/dns/widgets/editableRowTable.html
@@ -28,6 +28,8 @@
     </td>
   </tr>
 </table>
+<br></br>
+<button ng-click="deployDNSConfig()"  class="pull-right btn btn-primary">Deploy</button> 
 </div>
 
 
