--- a/src/app/pages/ui/modals/modalTemplates/deployConfigurationSuccessModal.html
+++ b/src/app/pages/ui/modals/modalTemplates/deployConfigurationSuccessModal.html
@@ -2,7 +2,7 @@
         <div class="modal-header bg-primary" style="background-color: #209e91;">
           <i class="ion-checkmark modal-icon"></i><span> Success</span>
         </div>
-        <div class="modal-body text-center">Configuration has been created</div>
+        <div class="modal-body text-center">Configuration has been deployed </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" ng-click="$dismiss()">OK</button>
         </div>
